# ai-in-4

./: .gitignore  .mcp.json  .sample.env  ADW_ARCHITECTURE_IMPROVEMENTS.md  ADW_VS_MICRO_SDLC_COMPARISON.md  AGENTIC_SYSTEM_COMPARISON.md  AGENTIC_SYSTEM_RECOMMENDATIONS.md  FIX_ADW_BOT_IDENTIFIER.md  INFRASTRUCTURE_PLAN.md  META_TESTING_KNOWLEDGE_SYSTEM_PLAN.md  MIGRATION_PLAN.md  README.md  SPEC_AUTONOMOUS_TEST_CREATION.md  STRIPE_INTEGRATION_SUMMARY.md  STRIPE_TESTING_IMPROVEMENTS.md  TEMPLATE_CLEANUP_PLAN.md  TESTING_SYSTEM_IMPLEMENTATION.md  package.json  playwright.config.ts
.claude/: settings.json
adws/: README.md  RICH_LOGGING_IMPLEMENTATION.md  adw_build.py  adw_build_iso.py  adw_document.py  adw_document_iso.py  adw_patch.py  adw_patch_iso.py  adw_plan.py  adw_plan_build.py  (+19 more)
app/server/: .env.sample  create_test_products.py  main.py  pyproject.toml  server.py
app/server/api/routes/: auth.py  courses.py  payments.py  users.py
app/server/core/: __init__.py  config.py
app/server/db/: backup.db  database.py  init_db.py  models.py  seed_db.py  seed_stripe_products.py
app/server/models/: schemas.py
app/server/services/: entitlement_service.py  magic_link.py  referral_service.py  stripe_service.py  user_service.py
app/server/tests/: README.md  conftest.py  test_auth.py  test_courses.py  test_entitlement_service.py  test_health.py  test_payment_integration.py  test_payments.py  test_referral_service.py  test_registration_extended.py  test_schemas.py  test_stripe_service.py  test_user_service.py  test_users.py
app/server/tests/assets/: README.md
(+110 files in other folders)
